Add some new package and misc

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -355,8 +355,8 @@ colors:
 #   - (macOS) /bin/bash --login
 #   - (Linux/BSD) user login shell
 #   - (Windows) powershell
-#shell:
-#  program: /bin/bash
+shell:
+  program: /usr/local/bin/zsh
 #  args:
 #    - --login
 
