--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,6 +7,8 @@ set-window-option -g pane-base-index 1
 
 setw -g mode-keys vi
 
+set -g default-shell /usr/local/bin/zsh
+
 source-file ~/.dotfiles/tmux/tmux.clipboard.conf
 source-file ~/.dotfiles/tmux/tmux.statusbar.conf
 
